--- a/index.css
+++ b/index.css
@@ -67,7 +67,7 @@ nav {
 
 nav ul li a {
     font-family: arial;
-    color: #eceff4;
+    color: #eceff4 !important;
     font-size: 16px;
     text-decoration: none;
 }
