--- a/index.css
+++ b/index.css
@@ -1,73 +1,39 @@
 body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    width: 100vw;
-    background-color: #2e3440;
-    color: #2e3440;
+    background-color: #d8dee9;
 }
 
-#particles-js {
-    width: 100%;
-    height: 100%;
-    background-color: #2e3440;
-}
-
-.dropdown-menu li a {
-    color:#3b4252;
-}
-
-.dropdown-menu li a:hover {
-    color:#3b4252;
+a:hover {
+  color: #4c566a !important; /*Replace with primary color*/
 }
 
 nav {
     width: 100%;
-    height: 60px;
-    background-color: transparent;
+    height: 6.5vh;
+    background-color: #eceff4;
 }
 
 nav ul li a {
-    font-family: arial;
-    color: #eceff4;
+    color: #4c566a;
     font-size: 16px;
     text-decoration: none;
 }
 
-.dropdown {
-    padding-top: 2.5%;
-}
-
-nav ul li ul {
-    display: none;
-    position: absolute;
-    border-radius: 0px 0px 4px 4px
-}
-
-a:hover {
-    color: #d8dee9 !important;
-}
-
-nav ul li:hover ul {
-    display: block;
-}
-
-.content {
-    margin-bottom: 50px;
-}
-
 .expand {
-    background-color: #2e3440;
-    height: 90vh;
+    background-color: #d8dee9;
+    height: 93.5vh;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
+* {
+  font-family: 'Roboto Mono', monospace;
+}
+
 
 h1, h2, h3,h4 {
-    color: white !important;
+  color: #4c566a;
     display: inline;
 }
 
@@ -77,7 +43,7 @@ h1, h2, h3,h4 {
     width: 1px;
     height: 3%;
     padding-left: 4px;
-    border-right: 2px solid white;
+    border-right: 2px solid #4c566a;
     animation: blink .9s infinite ease;
 }
 
@@ -98,7 +64,6 @@ h1, h2, h3,h4 {
 *{
   margin: 0;
   padding: 0;
-  font-family: 'Poppins', sans-serif;
 }
 
 body, html {
@@ -118,9 +83,7 @@ body, html {
 
 .content .text{
   position: relative;
-  color: #fff;
-  font-weight: 700;
-  font-size: 45px;
+  color: #4c566a;
   transform: scale(2);
   padding: 30px;
   letter-spacing: 2px;
@@ -130,12 +93,12 @@ body, html {
 .content .text:before,
 .content .text:after {
   padding: 30px;
-  color: white;
+  color: #4c566a;
   content: attr(data-text);
   position: absolute;
   width: 100%;
   height: 100%;
-  background: #2e3440;
+  background: transparent;
   overflow: hidden;
   top: 0;
 }
@@ -151,6 +114,34 @@ body, html {
   text-shadow: -2px 0 blue;
   animation: glitch-2 2s linear infinite reverse;
 }
+
+
+@media screen and (min-width: 1000px) {
+  #before, #typing, #afterquote{
+    font-size: 1.25vw;
+  }
+}
+
+
+@media only screen and (max-width: 1000px) {
+  #before, #typing, #afterquote{
+    font-size: 3vw;
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .content .text {
+    font-size: 1.5vw;
+  }
+}
+
+
+@media only screen and (max-width: 800px) {
+  .content .text {
+    font-size: 2.5vw;
+  }
+}
+
 
 @keyframes glitch-1 {
   0% {
