--- a/pages/resume/resume.css
+++ b/pages/resume/resume.css
@@ -18,6 +18,21 @@ nav ul li a {
     text-decoration: none;
 }
 
+.navbar-collapse {
+  background-color: #f8f9fa;
+  box-sizing: content-box !important;
+  
+}
+
+
+.show, .collapsing {
+  margin-left: -3%;
+  margin-right: -3%;
+  margin-top: -1%;
+  padding-left: 3%;
+}
+
+
 * {
   font-family: 'Roboto Mono', monospace;
 }
@@ -105,6 +120,10 @@ nav ul li a {
   padding-right: 10%;
   padding-top: 2.5%;
   text-align: center;
+}
+
+.aboutme-list, .skills-list, .services-list {
+  padding-left: 0px;
 }
 
 @media screen and (min-width: 1000px) {
