--- a/pages/portfolio/portfolio.css
+++ b/pages/portfolio/portfolio.css
@@ -9,6 +9,7 @@ color: #4c566a !important; /* Replace with primary color */
 nav {
   width: 100%;
   height: 6.5vh;
+  min-height: 60px;
   background-color: #eceff4;
 }
 
@@ -22,19 +23,11 @@ nav ul li a {
 font-family: 'Roboto Mono', monospace;
 }
 
-.aboutme h6 {
-padding-left: 10vw;
-padding-right: 10vw;
-}
-
-.aboutme-list {
-padding-left: 0%;
-}
-
 .navbar-collapse {
   background-color: #f8f9fa;
   box-sizing: content-box !important; 
 }
+
 .show, .collapsing {
   margin-left: -3%;
   margin-right: -3%;
@@ -42,35 +35,27 @@ padding-left: 0%;
   padding-left: 3%;
 }
 
-.aboutme-list li {
-  list-style: none;
-  margin-top: .5%;
-  min-width: 60vw;
+a {
+  color: #3b4252 !important;
 }
 
-.services-list {
+.websites-list {
   display: flex;
   flex-wrap:wrap;
   align-items: center;
   justify-content: center;
 }
 
-.aboutme {
-display: flex;
-flex-wrap: wrap;
-align-items: center;
-justify-content: center;
 
-}
-
-.services-list li {
+.websites-list li {
   list-style: none;
   width: 15vw;
   padding: 1.5%;
   min-width: 200px;
 }
 
-.skills-list li {
+
+.clients-list li {
 padding: 1.5%;
 min-width: 200px;
 }
@@ -79,7 +64,7 @@ min-width: 200px;
   padding-top: 5%;
 }
 
-.skills-list {
+.clients-list {
 display: flex;
 flex-wrap:wrap;
 align-items: center;
@@ -87,7 +72,7 @@ justify-content: center;
 
 }
 
-.skills-list li {
+.clients-list li {
   list-style: none;
   width: 15vw;
   min-width: 200px;
@@ -102,7 +87,7 @@ justify-content: center;
   justify-content: center;
 }
 
-.resume {
+.portfolio {
   width: 80vw;
   margin-right: 10%;
   margin-left: 10%;
@@ -111,14 +96,33 @@ justify-content: center;
   text-align: center;
 }
 
-.aboutme, .skills, .services {
+.websites, .clients {
 padding-left: 10%;
 padding-right: 10%;
 padding-top: 2.5%;
 text-align: center;
 }
 
-.aboutme-list, .skills-list, .services-list {
+.aboutme h6 {
+  padding-left: 10vw;
+  padding-right: 10vw;
+}
+
+.aboutme {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
+
+.aboutme, .skills, .services {
+  padding-left: 10%;
+  padding-right: 10%;
+  padding-top: 2.5%;
+  text-align: center;
+}
+
+.websites-list, .clients-list {
 padding-left: 0px;
 }
 
