--- a/pages/resume/resume.css
+++ b/pages/resume/resume.css
@@ -9,6 +9,7 @@ a:hover {
 nav {
     width: 100%;
     height: 6.5vh;
+    min-height: 60px;
     background-color: #eceff4;
 }
 
@@ -201,6 +202,10 @@ h1, h2, h3,h4 {
   left: -3px;
   text-shadow: -2px 0 blue;
   animation: glitch-2 2s linear infinite reverse;
+}
+
+a {
+  color: #3b4252 !important;
 }
 
 @keyframes glitch-1 {
