Stashing remote changes

--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
 {% load static %}
     <html lang="en">
-
+    <!-- desktop contact.html -->
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,7 +51,7 @@
         </nav>
         <div class="expand">
             <div class="d-flex flex-column">
-                <div class="content">
+                <div class="content" style="height: 10vh;">
                     <h1 class="text" data-text="Contact">Contact</h1>
                 </div>
                 <div class="content2">
