--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <html lang="en">
 
     <head>
-        
+        <!-- desktop index.html -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Alaric Hartsock</title>
