--- a/templates/mobileresume.html
+++ b/templates/mobileresume.html
@@ -1,7 +1,7 @@
 {% load static %}
 <DOCTYPE html>
     <html lang="en">
-
+<!-- mobile resume.html -->
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,7 +17,11 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
             integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
         <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
-
+        <style>
+            #before,#typing,#after {
+                font-size: 4vw;
+            }
+        </style>
     </head>
 
     <body>
@@ -51,7 +55,7 @@
 
         <div class="expand">
             <div class="d-flex flex-column">
-                <div class="content">
+                <div class="content" style="height: 10vh;">
                     <h1 data-text="Resume">Resume</h1>
                 </div>
                 <div class="content2">
