--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -7,7 +7,7 @@ color: #4c566a !important; /* Replace with primary color */
 }
 
 nav {
-  width: 100%;
+  width: 100vw;
   height: 6.5vh;
   min-height: 60px;
   background-color: #eceff4;
@@ -160,8 +160,8 @@ h1, h2, h3,h4 {
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400;600&display=swap');
 
 .content{
-width: 100%;
-height: 100%;
+width: 100vw;
+height: 100vh;
 display: flex;
 justify-content: center;
 align-items: center;
