--- a/static/css/index.css
+++ b/static/css/index.css
@@ -99,10 +99,10 @@ h1, h2, h3,h4 {
 }
 
 body, html {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  background-color: #2e3440;
+  width: 100vw;
+  height: 100vh;
+  background-color: red;
+  color: red;
 }
 
 .content{
