--- a/static/css/portfolio.css
+++ b/static/css/portfolio.css
@@ -6,8 +6,12 @@ body {
    color: #4c566a !important; /* Replace with primary color */
    }
    
+   .websites a,.clients a {
+    text-decoration: underline;
+  }
+
    nav {
-     width: 100%;
+     width: 100vw;
      height: 6.5vh;
      min-height: 60px;
      background-color: #eceff4;
@@ -160,8 +164,8 @@ body {
    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400;600&display=swap');
    
    .content{
-   width: 100%;
-   height: 100%;
+   width: 100vw;
+   height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
@@ -196,7 +200,7 @@ body {
    text-shadow: -2px 0 red;
    animation: glitch-1 2s linear infinite reverse;
    }
-   
+
    .content .text:after{
    left: -3px;
    text-shadow: -2px 0 blue;
