--- a/static/css/resume.css
+++ b/static/css/resume.css
@@ -7,7 +7,7 @@ a:hover {
 }
 
 nav {
-    width: 100%;
+    width: 100vw;
     height: 6.5vh;
     min-height: 60px;
     background-color: #eceff4;
@@ -161,8 +161,8 @@ h1, h2, h3,h4 {
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400;600&display=swap');
 
 .content{
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -192,23 +192,23 @@ h1, h2, h3,h4 {
   top: 0;
 }
 
-.content .text:before{
-  left: 3px;
-  text-shadow: -2px 0 red;
-  animation: glitch-1 2s linear infinite reverse;
-}
-
-.content .text:after{
-  left: -3px;
-  text-shadow: -2px 0 blue;
-  animation: glitch-2 2s linear infinite reverse;
-}
-
 a {
   color: #3b4252 !important;
 }
 
-@keyframes glitch-1 {
+.content .text:before{
+  left: 3px;
+  text-shadow: -2px 0 red;
+  animation: glitch-1 2s linear infinite reverse;
+  }
+  
+  .content .text:after{
+  left: -3px;
+  text-shadow: -2px 0 blue;
+  animation: glitch-2 2s linear infinite reverse;
+  }
+  
+  @keyframes glitch-1 {
   0% {
     clip: rect(132px, 700px, 101px, 30px);
   }
@@ -272,8 +272,8 @@ a {
   100% {
     clip: rect(14px, 700px, 100px, 30px);
   }
-}
-@keyframes glitch-2 {
+  }
+  @keyframes glitch-2 {
   0% {
     clip: rect(129px, 700px, 36px, 30px);
   }
@@ -337,4 +337,4 @@ a {
   100% {
     clip: rect(83px, 700px, 40px, 30px);
   }
-}
+  }
