--- a/templates/mobilecontact.html
+++ b/templates/mobilecontact.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
      {% load static %}
          <html lang="en">
-     
+        <!-- mobile contact.html -->
          <head>
              <meta charset="UTF-8">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +19,12 @@
                  integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
              <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
      
+            <style>
+                #before,#typing,#after {
+                    font-size: 4vw;
+                }
+            </style>
+
          </head>
      
          <body style="background-color: #2e3440;">
@@ -51,7 +57,7 @@
              </nav>
              <div class="expand">
                  <div class="d-flex flex-column">
-                     <div class="content">
+                     <div class="content" style="height: 10vh;">
                          <h1 data-text="Contact">Contact</h1>
                      </div>
                      <div class="content2">
