--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
      {% load static %}
      <html lang="en">
- 
+    <!-- mobile index.html -->
      <head>
          
          <meta charset="UTF-8">
@@ -18,8 +18,12 @@
          <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}">
          <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
              integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-         <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
- 
+         <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css"> 
+         <style>
+            #before,#typing,#after {
+                font-size: 4vw;
+            }
+        </style>
      </head>
  
      <body style="background-color: #2e3440;">
@@ -53,14 +57,14 @@
  
          <div class="expand">
              <div class="d-flex flex-column">
-                 <div class="content">
-                     <h1 data-text="Alaric Hartsock">
+                 <div class="content" style="height: 10vh;">
+                     <h1 data-text="Alaric Hartsock" style="font-size: 8vw;">
                          Alaric Hartsock</h1>
                  </div>
                  <div class="content2">
-                     <h4 id="before"></h4>
-                     <h4 id="typing"></h4>
-                     <h4 id="afterquote"> </h4>
+                     <h4 id="before" style="font-size: 4vw;"></h4>
+                     <h4 id="typing" style="font-size: 4vw;"></h4>
+                     <h4 id="afterquote" style="font-size: 4vw;"></h4>
                  </div>
                  <div id="icons">
                      &nbsp; <a href="mailto:alaric.hartsock@yahoo.com" target="_blank" rel="noopener" title="Email"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg></a> &nbsp;
