--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -2,7 +2,7 @@
 <DOCTYPE html>
     {% load static %}
     <html lang="en">
-
+<!-- desktop portfolio.html -->
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -52,7 +52,7 @@
 
         <div class="expand">
             <div class="d-flex flex-column">
-                <div class="content">
+                <div class="content" style="height: 10vh;">
                     <h1 class="text" data-text="Portfolio">Portfolio</h1>
                 </div>
                     <div class="content2">
