--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,7 +1,7 @@
 {% load static %}
 <DOCTYPE html>
     <html lang="en">
-
+<!-- desktop resume.html -->
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -51,7 +51,7 @@
 
         <div class="expand">
             <div class="d-flex flex-column">
-                <div class="content">
+                <div class="content" style="height: 10vh;"> 
                     <h1 class="text" data-text="Resume">Resume</h1>
                 </div>
                 <div class="content2">
