--- a/templates/contact.html
+++ b/templates/contact.html
@@ -20,8 +20,7 @@
         <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
 
     </head>
-
-    <body style="background-color: #2e3440;">
+    <body>
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <a href="../" class="navbar-brand">
                 Alaric Hartsock
@@ -66,20 +65,8 @@
                 <h5><strong>Contact me</strong></h5><br>
                 <h6>Looking for an in house developer or just need some help with your projects? Consultation is a click
                     away, email me at <a
-                        href="mailto:alaric.hartsock@yahoo.com?subject=consultation">alaric.hartsock@yahoo.com</a></h6>
+                        href="mailto:me@alarichartsock.com?subject=consultation">me@alarichartsock.com</a></h6>
             </div>
-
-            <!-- <div class="container form-top">
-                <div class="row">
-                    <form id="contact-form" method="post" action="contact-form-handler.php">
-                        <input name="name" type="text" class="form-control" placeholder="Your Name" required><br>
-                        <input name="email" type="email" class="form-control" placeholder="Your Name" required><br>
-                        <textarea name="message" class="form-control" placeholder="Message" row="4" requires></textarea><br>
-                        <input type="submit" class="form-control submit" value="SEND MESSAGE">
-                    </form>
-                </div>
-            </div> -->
-
         </div>
 
         <script>
@@ -88,12 +75,9 @@
             let letter = '';
             let direction = true;
 
-            var text = [
-                "Contact",
-            ];
+            var text = [ "Contact" ];
 
             function type() {
-
                 setTimeout(type, 60);
                 if (count === 0) {
                     direction = true;
@@ -115,12 +99,8 @@
                     index++;
                 }
             }
-
             type();
         </script>
-
-
-
         <!--Bootstrap JS-->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
