--- a/templates/mobilecontact.html
+++ b/templates/mobilecontact.html
@@ -68,12 +68,12 @@
                  </div>
              </div>
              <div class="portfolio">
-                 <div class="aboutme">
-                     <h5><strong>Contact me</strong></h5><br>
-                     <h6>Looking for an in house developer or just need some help with your projects? Consultation is a click
-                         away, email me at <a
-                             href="mailto:alaric.hartsock@yahoo.com?subject=consultation">alaric.hartsock@yahoo.com</a></h6>
-                 </div>
+                <div class="aboutme">
+                    <h5><strong>Contact me</strong></h5><br>
+                    <h6>Looking for an in house developer or just need some help with your projects? Consultation is a click
+                        away, email me at <a
+                            href="mailto:me@alarichartsock.com?subject=consultation">me@alarichartsock.com</a></h6>
+                </div>
      
                  <!-- <div class="container form-top">
                      <div class="row">
