--- a/templates/mobileresume.html
+++ b/templates/mobileresume.html
@@ -78,13 +78,13 @@
                             email</a></li>
                 </ul>
             </div>
-            <h6><a href="../../assets/documents/Resume.pdf" download>Download text resume</a></h6>
+            <h6><a href="../../assets/documents/Resume.pdf" download>Download resume</a></h6>
             <div class="services">
                 <h5>Services</h5>
                 <ul class="services-list">
                     <li>
                         <strong>Web development</strong><br>
-                        <p>Modern and mobile-ready website that will help you reach all of your marketing.</p>
+                        <p>Modern and mobile-ready websites that will meet or exceed your needs.</p>
                     </li>
                     <li>
                         <strong>Computer security</strong><br>
@@ -92,11 +92,11 @@
                     </li>
                     <li>
                         <strong>Software development</strong><br>
-                        <p>Software development from simple C programs to enterprise level object oriented languages</p>
+                        <p>Software development with languages from C to enterprise level object oriented languages</p>
                     </li>
                     <li>
                         <strong>App development</strong><br>
-                        <p>Native app cross platform app development using Flutter is available</p>
+                        <p>Native app cross platform app development using Flutter</p>
                     </li>
                 </ul>
                 <div class="service">
@@ -108,7 +108,7 @@
                 <ul class="skills-list">
                     <li>
                         <strong>GNU/Linux</strong><br>
-                        <p>Familiar with GNU/Linux and Unix type operating systems, package managers, and commands.</p>
+                        <p>Familiar with GNU/Linux and Unix type operating systems, package managers, commands, system calls, etc</p>
                     </li>
                     <li>
                         <strong>Computer security</strong><br>
@@ -116,16 +116,15 @@
                     </li>
                     <li>
                         <strong>Software development</strong><br>
-                        <p>Proficient with Python, Dart, Javascript, C, and Java.</p>
+                        <p>Proficient with Python, Dart, Javascript, C, and Java. Familiar with SQL and PHP.</p>
                     </li>
                     <li>
                         <strong>Flutter</strong><br>
-                        <p>Familiar and comfortable with Flutter, a native cross platform app development framework</p>
+                        <p>Experienced with Flutter, a native cross platform app development framework</p>
                     </li>
                     <li>
-                        <strong>Web maintenance</strong><br>
-                        <p>Comfortable with DNS, hosting providers, HTTPS, and most other topics related to website
-                            upkeep.</p>
+                        <strong>Web infastructure</strong><br>
+                        <p>Comfortable with DNS, hosting providers, HTTPS, and most other topics related to website upkeep.</p>
                     </li>
                 </ul>
                 <div class="service">
