--- a/templates/resume.html
+++ b/templates/resume.html
@@ -68,19 +68,19 @@
                     software development and computer security.</h6>
                 <ul class="aboutme-list">
                     <li><strong>Age:</strong> 20</li>
-                    <li><strong>Residence:</strong> Oregon USA</li>
+                    <li><strong>Residence:</strong> Oregon, USA</li>
                     <li><strong>Freelance:</strong> Available</li>
-                    <li><strong>Email:</strong> <a href="mailto:alaric.hartsock@yahoo.com?subject=consultation">Business
+                    <li><strong>Email:</strong> <a href="mailto:me@alarichartsock.com?subject=consultation">Business
                             email</a></li>
                 </ul>
             </div>
-            <h6><a href="../../assets/documents/Resume.pdf" download>Download text resume</a></h6>
+            <h6><a href="{% static "assets/documents/Resume.pdf" %}" download>Download resume</a></h6>
             <div class="services">
                 <h5>Services</h5>
                 <ul class="services-list">
                     <li>
                         <strong>Web development</strong><br>
-                        <p>Modern and mobile-ready website that will help you reach all of your marketing.</p>
+                        <p>Modern and mobile-ready websites that will meet or exceed your needs.</p>
                     </li>
                     <li>
                         <strong>Computer security</strong><br>
@@ -88,11 +88,11 @@
                     </li>
                     <li>
                         <strong>Software development</strong><br>
-                        <p>Software development from simple C programs to enterprise level object oriented languages</p>
+                        <p>Software development with languages from C to enterprise level object oriented languages</p>
                     </li>
                     <li>
                         <strong>App development</strong><br>
-                        <p>Native app cross platform app development using Flutter is available</p>
+                        <p>Native app cross platform app development using Flutter</p>
                     </li>
                 </ul>
                 <div class="service">
@@ -124,8 +124,6 @@
                             upkeep.</p>
                     </li>
                 </ul>
-                <div class="service">
-                </div>
             </div>
 
         </div>
