--- a/static/css/contact.css
+++ b/static/css/contact.css
@@ -94,6 +94,7 @@ justify-content: center;
   background-color: #eceff4;
   border-radius: 16px;
   text-align: center;
+  padding-bottom: 2.5vh;
 }
 
 .websites, .clients {
