--- a/static/css/portfolio.css
+++ b/static/css/portfolio.css
@@ -98,6 +98,7 @@ body {
      background-color: #eceff4;
      border-radius: 16px;
      text-align: center;
+     padding-bottom: 2.5vh;
    }
    
    .websites, .clients {
