--- a/templates/mobileportfolio.html
+++ b/templates/mobileportfolio.html
@@ -68,59 +68,64 @@
          </div>
          
          <div class="portfolio">
-             <div class="aboutme">
-                 <h5><strong>Portfolio</strong></h5><br>
-                 <h6>Here's a collection of projects & clients that I've worked on/for either fully or partially. Inquire for more information at <a href="mailto:alaric.hartsock@yahoo.com?subject=consultation">alaric.hartsock@yahoo.com</a>. Not all clients are listed due to non disclosure agreements. </h6>
-             </div>
-             <div class="websites">
-                 <h5>Websites</h5>
-                 <ul class="websites-list">
-                     <!-- todo: get permission and add a small image with the side in it above the text -->
-                     <li>
-                         <strong><a href="https://clearmourning.org/">Clear Mourning</a></strong><br>
-                         <p>Created website layout, pages</p>
-                     </li>
-                     <li>
-                         <strong>Brand Defense</strong><br>
-                         <p>Created the whole website</p>
-                     </li>
-                     <li>
-                         <strong><a href="https://tix6.centerstageticketing.com/sites/lakewoodtheatre/">Lakewood Theatre</a></strong><br>
-                         <p>Restyled a series of pages</p>
-                     </li>
-                     <li>
-                         <strong><a href="https://novunex.b2clogin.com/novunex.onmicrosoft.com/b2c_1_signinorup/oauth2/v2.0/authorize?client_id=7aed69dd-4d49-4bac-97d2-1986ce6f16f1&redirect_uri=https%3A%2F%2Foauth.wa.novunex.app%2Fsignin-oidc-azure-adb2c&response_type=id_token&scope=openid%20profile&response_mode=form_post&nonce=637364151745023007.NjZhOTIyZTAtNjgxNC00YzZiLTg4YjctNmY2OTczYjAyNTZiODRkZmY5YzQtMzhhOS00ZGFlLWI3MmEtYTNjYWY5ZjNmOWUw&state=CfDJ8HbktHT2Rd5Pt3-ByR30sba5oKQnGasH4707DEHsf8K8xKLkO0CQTe-Zlo5WGQRSAdx2R-Q3SKaN_RQqs0ZBtNSpe_qxhOc8G2Xnup5_UaOsWdTi7_AJ7w5gqYANulOy7uwaQ89O5qoXoitdkmWWmr9x4JCOJHYr3xIaX1ALng7FPm2MMZOSvbvbOCLab3BQdMnRPrfhgRSkgdt4aCe7agfCYa0IJFflcaDCk-hte_I3xJG_Ejg-Xp0G2tpGAOJDqUr2SgTEXvfRawC-LSZleyUwSxog-zc6hxytJUEOhjDXxXLKo31_Z8aMAoGKYfpRnvQPaC2tg0_xZmKlZhbHpSqoj0Qh4sa6h3vXyLFYwSQ-Al8cmg9q1YXYDg0w1HWsppWI5fVJl9flYV7j1nRWUMx0xRiuu9hl-45PtkJfmp3TRmRPxQXmfNuaBzks2nbW8OuGuOQD-avFO5bJ5_HupkYSg3T52EruGvSTw3V4ZfDEmneLA9Qa-pEzSbm0-EjYOPCcIUdlry7RUymIEVo_uuad6LtbbXBkGAksJKTJpJ8_ZKcfeGI_xs68RHjwtarG_dM9N48mDWSvo1sJc6qHpZXdjvPgnD5mlR7FaYhXreh_WDTyJ8D-N1PGNDQcVh4adh70Hc5D76IxmKF7_MQXp9dTFdrOGHQp1Mb7rcUlJA7k2BJrouHNTErxDwbnbjrlfdgKHv9ltTmo7rkT9AVhvWWMNLI8SovN0Gxp6k7hNcuIewcoQqDhuVv_O7Yk0ZSWELuhJRl_CciHr_G2eqfZ2ewLJRi5ADZ63HHTNtgyu5h_kH887FWZb0ayZO2x9WJ-IjITxPiwmYW7q9P6plSmRNkESahVZ-e3PHQ8ONyF-sH2HZGW-pfISRYsdLqwcCTA34yagnnCnGWALT0FkYMSYhc&x-client-SKU=ID_NETSTANDARD2_0&x-client-ver=5.5.0.0">OMEP Cloud</a></strong><br>
-                         <p>Created multiple pages & components</p>
-                     </li>
-                 </ul>
-                 <div class="service">
-                 </div>
-             </div>
- 
-             <div class="clients">
-                 <h5>Clients</h5>
-                 <ul class="clients-list">
-                     <!-- todo: get permission and add logos above the text -->
-                     <li>
-                         <strong><a href="https://alpenglowagency.com/">Alpenglow Agency</a></strong><br>
-                         <p>Web development</p>
-                     </li>
-                     <li>
-                         <strong><a href="https://www.volitantconsulting.com/">Volitant Cosulting</a></strong><br>
-                         <p>Web development and security work</p>
-                     </li>
-                     <li>
-                         <strong><a href="https://www.omep.org/">OMEP</a></strong><br>
-                         <p>Web development</p>
-                     </li>
-                     <li>
-                         <strong>Logical Cropping</strong><br>
-                         <p>Research & leads generation</p>
-                     </li>
-                 </ul>
-             </div>
- 
-         </div>
+            <div class="aboutme">
+                <h5><strong>Portfolio</strong></h5><br>
+                <h6>Here's a collection of projects & clients that I've worked on/for either fully or partially. Inquire for more information at <a href="mailto:me@alarichartsock.com">me@alarichartsock.com</a>. Some clients not listed due to non disclosure agreements. </h6>
+            </div>
+            <div class="websites">
+                <h5>Websites</h5>
+                <ul class="websites-list">
+                    <!-- todo: get permission and add a small image with the side in it above the text -->
+                    <li>
+                        <p>Restyled and restructured the whole website.</p>
+                        <strong><a href="https://clearmourning.org/">Clear Mourning</a></strong><br>
+                    </li>
+                    <!-- <li>
+                        <p>Created the whole website</p>
+                        <strong>Brand Defense</strong><br>
+                    </li> -->
+                    <li>
+                        <p>Restyled a series of pages</p>
+                        <strong><a href="https://tix6.centerstageticketing.com/sites/lakewoodtheatre/">Lakewood Theatre</a></strong><br>
+                    </li>
+                    <li>
+                        <p>Created multiple pages & components</p>
+                        <strong><a href="https://novunex.b2clogin.com/novunex.onmicrosoft.com/b2c_1_signinorup/oauth2/v2.0/authorize?client_id=7aed69dd-4d49-4bac-97d2-1986ce6f16f1&redirect_uri=https%3A%2F%2Foauth.wa.novunex.app%2Fsignin-oidc-azure-adb2c&response_type=id_token&scope=openid%20profile&response_mode=form_post&nonce=637364151745023007.NjZhOTIyZTAtNjgxNC00YzZiLTg4YjctNmY2OTczYjAyNTZiODRkZmY5YzQtMzhhOS00ZGFlLWI3MmEtYTNjYWY5ZjNmOWUw&state=CfDJ8HbktHT2Rd5Pt3-ByR30sba5oKQnGasH4707DEHsf8K8xKLkO0CQTe-Zlo5WGQRSAdx2R-Q3SKaN_RQqs0ZBtNSpe_qxhOc8G2Xnup5_UaOsWdTi7_AJ7w5gqYANulOy7uwaQ89O5qoXoitdkmWWmr9x4JCOJHYr3xIaX1ALng7FPm2MMZOSvbvbOCLab3BQdMnRPrfhgRSkgdt4aCe7agfCYa0IJFflcaDCk-hte_I3xJG_Ejg-Xp0G2tpGAOJDqUr2SgTEXvfRawC-LSZleyUwSxog-zc6hxytJUEOhjDXxXLKo31_Z8aMAoGKYfpRnvQPaC2tg0_xZmKlZhbHpSqoj0Qh4sa6h3vXyLFYwSQ-Al8cmg9q1YXYDg0w1HWsppWI5fVJl9flYV7j1nRWUMx0xRiuu9hl-45PtkJfmp3TRmRPxQXmfNuaBzks2nbW8OuGuOQD-avFO5bJ5_HupkYSg3T52EruGvSTw3V4ZfDEmneLA9Qa-pEzSbm0-EjYOPCcIUdlry7RUymIEVo_uuad6LtbbXBkGAksJKTJpJ8_ZKcfeGI_xs68RHjwtarG_dM9N48mDWSvo1sJc6qHpZXdjvPgnD5mlR7FaYhXreh_WDTyJ8D-N1PGNDQcVh4adh70Hc5D76IxmKF7_MQXp9dTFdrOGHQp1Mb7rcUlJA7k2BJrouHNTErxDwbnbjrlfdgKHv9ltTmo7rkT9AVhvWWMNLI8SovN0Gxp6k7hNcuIewcoQqDhuVv_O7Yk0ZSWELuhJRl_CciHr_G2eqfZ2ewLJRi5ADZ63HHTNtgyu5h_kH887FWZb0ayZO2x9WJ-IjITxPiwmYW7q9P6plSmRNkESahVZ-e3PHQ8ONyF-sH2HZGW-pfISRYsdLqwcCTA34yagnnCnGWALT0FkYMSYhc&x-client-SKU=ID_NETSTANDARD2_0&x-client-ver=5.5.0.0">OMEP Cloud</a></strong><br>
+                    </li>
+                </ul>
+            </div>
+            <div class="clients">
+                <h5>Clients</h5>
+                <ul class="clients-list">
+                    <!-- todo: get permission and add logos above the text -->
+                    <!-- <li>
+                        <strong><a href="https://www.coic.org/">Central Oregon Intergovernmental Council</a><br><br>Network Hardening, Automation, and Accounting:</strong><br>
+                        <p>Worked to distribute 1.6 million dollars of Oregon CARES funding in partnership with the Central Oregon Intergovernmental Council. Completed 5 Python automations which automated the download of files, client emailing, etc. </p>
+                    </li>
+                    <li>
+                        <strong><a href="https://www.linkedin.com/company/logicalcropping/">Logical Cropping</a><br><br>Research & Leads Generation:</strong><br>
+                        <p>Worked with coworkers to create a spreadsheet with hundreds of potential customers for a flourishing agricultural technology business.</p>
+                    </li> -->
+                    <li>
+                        <p>Research & leads generation</p>
+                        <strong><a href="https://www.linkedin.com/company/logicalcropping/">Logical Cropping</a></strong><br>
+                    </li>
+                    <li>
+                        <p>Web development</p>
+                        <strong><a href="https://alpenglowagency.com/">Alpenglow Agency</a></strong><br>
+                    </li>
+                    <li>
+                        <p>Web development and security work</p>
+                        <strong><a href="https://www.volitantconsulting.com/">Volitant Cosulting</a></strong><br>
+                    </li>
+                    <li>
+                        <p>Web development</p>
+                        <strong><a href="https://www.omep.org/">OMEP</a></strong><br>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
  
          <script>
              let count = 0;
@@ -170,5 +175,4 @@
              crossorigin="anonymous"></script>
          <script src="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.js"></script>
      </body>
- 
-     </html>
+</html>
