--- a/templates/mobileresume.html
+++ b/templates/mobileresume.html
@@ -42,9 +42,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../resume">Resume</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="../portfolio">Portfolio</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="../contact">Contact</a>
                     </li>
@@ -132,45 +132,6 @@
             </div>
 
         </div>
-
-        <script>
-            let count = 0;
-            let index = 0;
-            let letter = '';
-            let direction = true;
-
-            var text = [
-                "Resume",
-            ];
-
-            function type() {
-
-                setTimeout(type, 60);
-                if (count === 0) {
-                    direction = true;
-                }
-                if (letter.length >= text[index].length) {
-                    direction = false;
-                }
-                if (index == text.length - 1) {
-                    index = 0;
-                }
-                currentText = text[index];
-
-                if (direction) {
-                    letter = currentText.slice(0, count++);
-                    document.querySelector('#typing').textContent = letter;
-                } else {
-
-                }
-
-                if (count === 0) {
-                    index++;
-                }
-            }
-
-            type();
-        </script>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
