--- a/static/css/index.css
+++ b/static/css/index.css
@@ -6,10 +6,14 @@ a:hover {
   color: #4c566a !important; /*Replace with primary color*/
 }
 
+#particles-js {
+  height: 92.5vh !important;
+}
+
 nav {
     width: 100%;
-    height: 6.5vh;
-    min-height: 60px;
+    height: 7.5vh;
+    /* min-height: 60px; */
     background-color: #eceff4;
 }
 
@@ -52,17 +56,17 @@ a {
 
 .expand {
     background-color: #d8dee9;
-    height: 93.5vh;
+    height: 92.5vh;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top:-93.5vh;
 }
 
 * {
   font-family: 'Roboto Mono', monospace;
 }
-
 
 h1, h2, h3,h4 {
   color: #4c566a;
@@ -72,6 +76,7 @@ h1, h2, h3,h4 {
 #typing::after {
     content: " ";
     position: relative;
+    z-index:-1;
     width: 1px;
     height: 3%;
     padding-left: 4px;
@@ -91,7 +96,6 @@ h1, h2, h3,h4 {
 #afterquote {
     padding-left: 3px;
 }
-
 @import url('https://fonts.googleapis.com/css?family=Poppins:700,500,600,700&display=swap');
 *{
   margin: 0;
@@ -101,8 +105,6 @@ h1, h2, h3,h4 {
 body, html {
   width: 100vw;
   height: 100vh;
-  background-color: red;
-  color: red;
 }
 
 .content{
@@ -115,6 +117,7 @@ body, html {
 
 .content .text{
   position: relative;
+  z-index:0;
   color: #4c566a;
   transform: scale(2);
   padding: 30px;
