--- a/static/css/resume.css
+++ b/static/css/resume.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #d8dee9 !important;
+  background-color: #d8dee9 !important;
 }
 
 a:hover {
@@ -23,7 +23,6 @@ nav ul li a {
   background-color: #f8f9fa;
   box-sizing: content-box !important;
 }
-
 
 .show, .collapsing {
   margin-left: -3%;
@@ -72,7 +71,7 @@ nav ul li a {
     list-style: none;
     width: 15vw;
     padding: 1.5%;
-    min-width: 200px;
+    /* min-width: 200px; */
 }
 
 .skills-list li {
@@ -161,7 +160,7 @@ h1, h2, h3,h4 {
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400;600&display=swap');
 
 .content{
-  width: 100vw;
+  width: 99vw;
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -185,8 +184,6 @@ h1, h2, h3,h4 {
   color: #4c566a;
   content: attr(data-text);
   position: absolute;
-  width: 100%;
-  height: 100%;
   background: transparent; /* d8dee9 */
   overflow: hidden;
   top: 0;
@@ -195,146 +192,3 @@ h1, h2, h3,h4 {
 a {
   color: #3b4252 !important;
 }
-
-.content .text:before{
-  left: 3px;
-  text-shadow: -2px 0 red;
-  animation: glitch-1 2s linear infinite reverse;
-  }
-  
-  .content .text:after{
-  left: -3px;
-  text-shadow: -2px 0 blue;
-  animation: glitch-2 2s linear infinite reverse;
-  }
-  
-  @keyframes glitch-1 {
-  0% {
-    clip: rect(132px, 700px, 101px, 30px);
-  }
-  5% {
-    clip: rect(17px, 700px, 94px, 30px);
-  }
-  10% {
-    clip: rect(40px, 700px, 66px, 30px);
-  }
-  15% {
-    clip: rect(87px, 700px, 82px, 30px);
-  }
-  20% {
-    clip: rect(137px, 700px, 61px, 30px);
-  }
-  25% {
-    clip: rect(34px, 700px, 14px, 30px);
-  }
-  30% {
-    clip: rect(133px, 700px, 74px, 30px);
-  }
-  35% {
-    clip: rect(76px, 700px, 107px, 30px);
-  }
-  40% {
-    clip: rect(59px, 700px, 130px, 30px);
-  }
-  45% {
-    clip: rect(29px, 700px, 84px, 30px);
-  }
-  50% {
-    clip: rect(22px, 700px, 67px, 30px);
-  }
-  55% {
-    clip: rect(67px, 700px, 62px, 30px);
-  }
-  60% {
-    clip: rect(10px, 700px, 105px, 30px);
-  }
-  65% {
-    clip: rect(78px, 700px, 115px, 30px);
-  }
-  70% {
-    clip: rect(105px, 700px, 13px, 30px);
-  }
-  75% {
-    clip: rect(15px, 700px, 75px, 30px);
-  }
-  80% {
-    clip: rect(66px, 700px, 39px, 30px);
-  }
-  85% {
-    clip: rect(133px, 700px, 73px, 30px);
-  }
-  90% {
-    clip: rect(36px, 700px, 128px, 30px);
-  }
-  95% {
-    clip: rect(68px, 700px, 103px, 30px);
-  }
-  100% {
-    clip: rect(14px, 700px, 100px, 30px);
-  }
-  }
-  @keyframes glitch-2 {
-  0% {
-    clip: rect(129px, 700px, 36px, 30px);
-  }
-  5% {
-    clip: rect(36px, 700px, 4px, 30px);
-  }
-  10% {
-    clip: rect(85px, 700px, 66px, 30px);
-  }
-  15% {
-    clip: rect(91px, 700px, 91px, 30px);
-  }
-  20% {
-    clip: rect(148px, 700px, 138px, 30px);
-  }
-  25% {
-    clip: rect(38px, 700px, 122px, 30px);
-  }
-  30% {
-    clip: rect(69px, 700px, 54px, 30px);
-  }
-  35% {
-    clip: rect(98px, 700px, 71px, 30px);
-  }
-  40% {
-    clip: rect(146px, 700px, 34px, 30px);
-  }
-  45% {
-    clip: rect(134px, 700px, 43px, 30px);
-  }
-  50% {
-    clip: rect(102px, 700px, 80px, 30px);
-  }
-  55% {
-    clip: rect(119px, 700px, 44px, 30px);
-  }
-  60% {
-    clip: rect(106px, 700px, 99px, 30px);
-  }
-  65% {
-    clip: rect(141px, 700px, 74px, 30px);
-  }
-  70% {
-    clip: rect(20px, 700px, 78px, 30px);
-  }
-  75% {
-    clip: rect(133px, 700px, 79px, 30px);
-  }
-  80% {
-    clip: rect(78px, 700px, 52px, 30px);
-  }
-  85% {
-    clip: rect(35px, 700px, 39px, 30px);
-  }
-  90% {
-    clip: rect(67px, 700px, 70px, 30px);
-  }
-  95% {
-    clip: rect(71px, 700px, 103px, 30px);
-  }
-  100% {
-    clip: rect(83px, 700px, 40px, 30px);
-  }
-  }
