--- a/templates/mobilecontact.html
+++ b/templates/mobilecontact.html
@@ -45,9 +45,9 @@
                          <li class="nav-item">
                              <a class="nav-link" href="../resume">Resume</a>
                          </li>
-                         <li class="nav-item">
+                         <!-- <li class="nav-item">
                              <a class="nav-link" href="../portfolio">Portfolio</a>
-                         </li>
+                         </li> -->
                          <li class="nav-item">
                              <a class="nav-link" href="../contact">Contact</a>
                          </li>
@@ -75,58 +75,7 @@
                             href="mailto:me@alarichartsock.com?subject=consultation">me@alarichartsock.com</a></h6>
                 </div>
      
-                 <!-- <div class="container form-top">
-                     <div class="row">
-                         <form id="contact-form" method="post" action="contact-form-handler.php">
-                             <input name="name" type="text" class="form-control" placeholder="Your Name" required><br>
-                             <input name="email" type="email" class="form-control" placeholder="Your Name" required><br>
-                             <textarea name="message" class="form-control" placeholder="Message" row="4" requires></textarea><br>
-                             <input type="submit" class="form-control submit" value="SEND MESSAGE">
-                         </form>
-                     </div>
-                 </div> -->
-     
              </div>
-     
-             <script>
-                 let count = 0;
-                 let index = 0;
-                 let letter = '';
-                 let direction = true;
-     
-                 var text = [
-                     "Contact",
-                 ];
-     
-                 function type() {
-     
-                     setTimeout(type, 60);
-                     if (count === 0) {
-                         direction = true;
-                     }
-                     if (letter.length >= text[index].length) {
-                         direction = false;
-                     }
-                     if (index == text.length - 1) {
-                         index = 0;
-                     }
-                     currentText = text[index];
-     
-                     if (direction) {
-                         letter = currentText.slice(0, count++);
-                         document.querySelector('#typing').textContent = letter;
-                     } else { }
-     
-                     if (count === 0) {
-                         index++;
-                     }
-                 }
-     
-                 type();
-             </script>
-     
-     
-     
              <!--Bootstrap JS-->
              <script src="https://code.jquery.com/jquery-3.3.1.min.js"
                  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
