--- a/templates/mobileindex.html
+++ b/templates/mobileindex.html
@@ -44,9 +44,9 @@
                      <li class="nav-item">
                          <a class="nav-link" href="/resume">Resume</a>
                      </li>
-                     <li class="nav-item">
+                     <!-- <li class="nav-item">
                          <a class="nav-link" href="/portfolio">Portfolio</a>
-                     </li>
+                     </li> -->
                      <li class="nav-item">
                          <a class="nav-link" href="/contact">Contact</a>
                      </li>
