--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,16 @@
         <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
 
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3457ZP4B90"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-3457ZP4B90');
+    </script>
+
 
     <body style="background-color: #2e3440;">
         <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -39,12 +49,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/resume">Resume</a>
-                    </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="/portfolio">Portfolio</a>
-                    </li> -->
-                    </ul>
-                </div>
+                    </li>    </div>
             </div>
         </nav>
 
@@ -81,7 +86,7 @@
         <script src="{% static "js/particles.js" %}"></script>
         <script src="{% static "js/app.js" %}"></script>
         <script>
-            type();
+            type()
         </script>
 
         <!--Bootstrap JS-->
