--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,24 +1,34 @@
 {% load static %}
 <DOCTYPE html>
     <html lang="en">
-<!-- desktop resume.html -->
+    <!-- desktop resume.html -->
+
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Alaric Hartsock Resume</title>
         <!-- Custom CSS-->
-        <link rel="stylesheet" type="text/css" href="{% static "css/resume.css" %}">
+        <link rel="stylesheet" type="text/css" href="{% static " css/resume.css" %}">
 
         <!--Roboto font CSS -->
         <link href='https://fonts.googleapis.com/css2?family=Roboto&display=swap' rel='stylesheet' type='text/css'>
 
         <!-- Bootstrap CSS-->
-        <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}">
+        <link rel="stylesheet" href="{% static " bootstrap/css/bootstrap.min.css" %}">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
             integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
         <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
 
     </head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3457ZP4B90"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-3457ZP4B90');
+    </script>
 
     <body>
         <nav class="navbar navbar-expand-md navbar-light bg-light">
@@ -28,7 +38,7 @@
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
-    
+
             <div class=" collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
                     <ul class="navbar-nav ml-auto"></ul>
@@ -46,10 +56,10 @@
             </div>
         </nav>
         <div class="resume" style="margin-top:5vh">
-            
+
             <div class="aboutme" style="padding:0px">
                 <!-- <h5><strong>Resume</strong></h5><br> -->
-                <embed src="{% static "assets/documents/Resume.pdf" %}" id='resume' width="100%" height="900px"/>
+                <embed src="{% static " assets/documents/Resume.pdf" %}" id='resume' width="100%" height="900px" />
             </div>
         </div>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"
