Fixed formatting, navbar push button

--- a/templates/license.html
+++ b/templates/license.html
@@ -22,6 +22,16 @@
 
   </head>
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-3457ZP4B90"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-3457ZP4B90');
+    </script>
+
   <body style="background-color: #2e3440;">
       <nav class="navbar navbar-expand-md navbar-light bg-light">
           <a href="../" class="navbar-brand">
