--- a/static/css/index.css
+++ b/static/css/index.css
@@ -12,7 +12,7 @@ a:hover {
 
 nav {
     width: 100%;
-    height: 7.5vh;
+    /* height: 7.5vh; */
     /* min-height: 60px; */
     background-color: #eceff4;
 }
@@ -26,7 +26,6 @@ nav ul li a {
 .navbar-collapse {
   background-color: #f8f9fa;
   box-sizing: content-box !important;
-  
 }
 
 .content2 {
@@ -56,12 +55,12 @@ a {
 
 .expand {
     background-color: #d8dee9;
-    height: 92.5vh;
+    height: 100vh;
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top:-93.5vh;
+    margin-top:-100vh;
 }
 
 * {
