Did a ton of stuff.
Remove redundant CSS, rename hrpc (whatever that was) to main, add blog, change sitemaps.xml to dynamic, add makefile, redo readme, fix some minor UI issues. It's not ready for prod yet but I'm committing because I don't want to lose my changes.

--- a/static/css/resume.css
+++ b/static/css/resume.css
@@ -2,111 +2,8 @@ body {
   background-color: #d8dee9 !important;
 }
 
-a:hover {
-  color: #4c566a !important; /* Replace with primary color */
-}
-
-nav {
-    width: 100vw;
-    height: 6.5vh;
-    min-height: 60px;
-    background-color: #eceff4;
-}
-
-nav ul li a {
-    color: #4c566a;
-    font-size: 16px;
-    text-decoration: none;
-}
-
-.navbar-collapse {
-  background-color: #f8f9fa;
-  box-sizing: content-box !important;
-}
-
-.show, .collapsing {
-  margin-left: -3%;
-  margin-right: -3%;
-  margin-top: -1%;
-  padding-left: 3%;
-  padding-bottom: 2.5vh;
-}
-
-
-* {
-  font-family: 'Roboto Mono', monospace;
-}
-
-.aboutme h6 {
-  padding-left: 10vw;
-  padding-right: 10vw;
-}
-
-.aboutme-list {
-  padding-left: 0%;
-}
-
-.aboutme-list li {
-    list-style: none;
-    margin-top: .5%;
-    min-width: 60vw;
-}
-
-.services-list {
-    display: flex;
-    flex-wrap:wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-.aboutme {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
-
-}
-
-.services-list li {
-    list-style: none;
-    width: 15vw;
-    padding: 1.5%;
-    /* min-width: 200px; */
-}
-
-.skills-list li {
-  padding: 1.5%;
-  min-width: 200px;
-}
-
-.services-list li p {
-    padding-top: 5%;
-}
-
-.skills-list {
-  display: flex;
-  flex-wrap:wrap;
-  align-items: center;
-  justify-content: center;
-  
-}
-
-.skills-list li {
-    list-style: none;
-    width: 15vw;
-    min-width: 200px;
-}
-
-.expand {
-    background-color: #d8dee9;
-    height: 93.5vh;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
 .resume {
+    height: 85.0vh;
     width: 80vw;
     margin-right: 10%;
     margin-left: 10%;
@@ -115,80 +12,7 @@ nav ul li a {
     text-align: center;
 }
 
-.aboutme, .skills, .services {
-  padding-left: 10%;
-  padding-right: 10%;
-  padding-top: 2.5%;
-  text-align: center;
-}
-
-.aboutme-list, .skills-list, .services-list {
-  padding-left: 0px;
-}
-
-@media screen and (min-width: 1000px) {
-  #before, #typing, #afterquote{
-    font-size: 1.25vw;
-  }
-}
-
-
-@media only screen and (max-width: 1000px) {
-  #before, #typing, #afterquote{
-    font-size: 3vw;
-  }
-}
-
-@media screen and (min-width: 800px) {
-  .content .text {
-    font-size: 1.5vw;
-  }
-}
-
-
-@media only screen and (max-width: 800px) {
-  .content .text {
-    font-size: 2.5vw;
-  }
-}
-
-h1, h2, h3,h4 {
-    color: #4c566a;
-    display: inline;
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;400;600&display=swap');
-
-.content{
-  width: 99vw;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.content .text{
-  position: relative;
-  color: #4c566a;
-  font-weight: 400;
-  transform: scale(2);
-  padding: 30px;
-  letter-spacing: 2px;
-  text-transform: uppercase;
-}
-
-.content .text:before,
-.content .text:after {
-  padding: 30px;
-  color: #4c566a;
-  content: attr(data-text);
-  position: absolute;
-  background: transparent; /* d8dee9 */
-  overflow: hidden;
-  top: 0;
-}
-
-a {
-  color: #3b4252 !important;
+#resume {
+  height: 85.0vh;
+  margin-bottom: 5vh;
 }
