--- a/templates/blog_detail.html
+++ b/templates/blog_detail.html
@@ -1,45 +1,35 @@
-{% load static %}
 <DOCTYPE html>
+    {% load static %}
+    {% load markdown_extras %}
     <html lang="en">
-<!-- desktop resume.html -->
+
     <head>
+        <!-- desktop index.html -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Alaric Hartsock Resume</title>
-        <!-- Custom CSS-->
-        <link rel="stylesheet" type="text/css" href="{% static "css/resume.css" %}">
-
-        <link rel="stylesheet" type="text/css" href="{% static "css/main.css" %}">
-
-        <!--Roboto font CSS -->
-        <link href='https://fonts.googleapis.com/css2?family=Roboto&display=swap' rel='stylesheet' type='text/css'>
-
-        <!-- Bootstrap CSS-->
-        <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
-            integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
-
+        <title>{{post.title}}</title>
     </head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-3457ZP4B90"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-    
-      gtag('config', 'G-3457ZP4B90');
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-3457ZP4B90');
     </script>
 
-    <body>
+
+    <body style="background-color: #2e3440;">
         <nav class="navbar navbar-expand-md navbar-light bg-light">
             <a href="../" class="navbar-brand">
                 Alaric Hartsock
             </a>
-            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <button aria-label="navbar toggle" type="button" class="navbar-toggler" data-toggle="collapse"
+                data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
-    
+
             <div class=" collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ml-auto">
                     <ul class="navbar-nav ml-auto"></ul>
@@ -52,20 +42,40 @@
                     <li class="nav-item">
                         <a class="nav-link" href="../resume">Resume</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="../portfolio">Portfolio</a>
-                    </li> -->
-                    </ul>
                 </div>
             </div>
         </nav>
-        <div class="resume" style="margin-top:5vh">
-            
-            <div class="aboutme" style="padding:0px">
-                <!-- <h5><strong>Resume</strong></h5><br> -->
-                <embed src="{% static "assets/documents/Resume.pdf" %}" id='resume' width="100%"/>
+
+        <div id="particles-js"></div>
+
+        <div class="expand">
+            <div class="material">
+                <h1>{{post.title}}</h1><br>
+                <small>By: {{post.author.first_name}} {{post.author.last_name}}</small>
+                <hr>
+                <p>{{post.body | markdown | safe}}</p>
             </div>
         </div>
+        </div>
+
+        <!-- Custom JS -->
+        <script src="{% static "js/particles.js" %}"></script>
+        <script src="{% static "js/main.js" %}"></script>
+
+        <!-- Custom CSS-->
+        <link rel="stylesheet" type="text/css" href="{% static "css/main.css" %}"> 
+        <link rel="stylesheet" type="text/css" href="{% static "css/blog_detail.css" %}">
+        
+        <!--Roboto font CSS -->
+        <link href='https://fonts.googleapis.com/css2?family=Roboto&display=swap' rel='stylesheet' type='text/css'>
+
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="{% static "bootstrap/css/bootstrap.min.css" %}">
+        <!-- <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" -->
+        <!-- integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"> -->
+        <link rel="stylesheet" href="https://unpkg.com/bootstrap-table@1.16.0/dist/bootstrap-table.min.css">
+
+        <!--Bootstrap JS-->
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"
             integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
